--- a/examples/config.toml
+++ b/examples/config.toml
@@ -6,5 +6,5 @@ MinimalLogLevel = 1
 
 [[Masks]]
 Path = "/home/user/go/src"
-MaskList = ["*.go", "*/go.mod", "*/go.sum"]
+FileNameMaskList = ["*.go", "go.mod", "go.sum"]
 Recursive = true
